// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageUploader component should render an image uploader 1`] = `
<div>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className={undefined}
      style={undefined}
    >
      Upload Button
    </span>
  </button>
  <div
    className="preview"
  >
    <img
      alt="preview"
      src="http://www.example.com/foobar.png"
    />
  </div>
  <div
    className="preview-title"
  >
    
  </div>
  <input
    className="hidden"
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`ImageUploader component should render an image uploader without preview 1`] = `
<div>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className={undefined}
      style={undefined}
    >
      Upload Button
    </span>
  </button>
  <div
    className="preview-title"
  >
    
  </div>
  <input
    className="hidden"
    onChange={[Function]}
    type="file"
  />
</div>
`;
